--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -16,13 +16,13 @@
 	{% endif %}
 	<p>{% trans %}Version {{version}}, released on the {{releaseday}}{% endtrans %}</p>
 	{% if modify %}
-	<a href="{{base}}/publish" class="btn btn-info">{% trans %}Edit this release{% endtrans %}</a>
-	<a href="{{base}}/publish" class="btn">{% trans %}Edit this addon{% endtrans %}</a>
+	<a href="{{base}}/publish/{{game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit this addon{% endtrans %}</a>
+	<a href="{{base}}/publish/{{game.short}}/{{addon.short}}/{{version}}" class="btn">{% trans %}Edit this release{% endtrans %}</a>
 	{% endif %}
 	<hr>
 	<div class="row-fluid">
-		<div class="span3">
-			<p class="" style="font-size: 0;">
+		<div class="span3">c
+		<p class="" style="font-size: 0;">
 				<img src="{{base}}img/title.png" style="width: 100%; margin-bottom: 2%;">
 				<img src="{{base}}img/title.png" style="padding: 0; border: 0; width: 32%; margin-left: 0; margin-right: 2%;">
 				<img src="{{base}}img/title.png" style="padding: 0; border: 0; width: 32%; margin-left: 0; margin-right: 2%;">
