--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -312,10 +312,17 @@ input.noerror:focus:invalid:focus, textarea.noerror:focus:invalid:focus, select.
 
 /* Lists */
 
-.media-list.addons {
+.media-list.addons-small {
 	img {
 		width: 84px;
 		height: 64px;
+	}
+}
+
+.media-list.addons {
+	img {
+		width: 150px;
+		height: 112,5px;
 	}
 
 	@media (max-width: 767px) {
