fixed extra letter

--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -21,7 +21,7 @@
 	{% endif %}
 	<hr>
 	<div class="row-fluid">
-		<div class="span3">c
+		<div class="span3">
 		<p class="" style="font-size: 0;">
 				<img src="{{base}}img/title.png" style="width: 100%; margin-bottom: 2%;">
 				<img src="{{base}}img/title.png" style="padding: 0; border: 0; width: 32%; margin-left: 0; margin-right: 2%;">
