added game labels to publish portal and front page prototype

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -337,11 +337,21 @@ input.noerror:focus:invalid:focus, textarea.noerror:focus:invalid:focus, select.
 
 /* Labels */
 
-.label.label-rage {
+.heading-label, .carousel-caption .heading-label {
+	display: inline;
+	margin-right: 3px;
+}
+
+.label-game {
+	display: inline;
+	vertical-align: text-top;
+}
+
+.label-rage {
 	background-color: rgb(185, 74, 72);
 }
 
-.label.label-openclonk {
+.label-openclonk {
 	background-color: rgb(153, 153, 153);
 }
 
