--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -23,11 +23,12 @@
                     </div>
 				</div>!-->
 				<div class="active item">
-					<a href="{{base}}/addons/rage/infinity">
-						<img src="http://placehold.it/768x432" alt>
+					<a href="http://clonkforge.net/pr.php?pr=1454">
+						<img src="{{base}}/img/infinity.png" alt="Clonk Infinity">
 					</a>
 					<div class="carousel-caption">
-						<h4>Soon on Lorry: Clonk Infinity</h4>
+						<h4 class="heading-label">Soon on Lorry: Clonk Infinity</h4>
+						<a href="{{base}}/addons/rage" class="label label-game label-rage">Clonk Rage</a>
 						<p>Basefights in the skylands and georgious graphics: Clonk Infinity is nearing completion.</p>
                     </div>
 				</div>
