--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -29,10 +29,11 @@
 		{% for addon in addons_unreleased %}
 			<li class="media">
 				<div class="pull-left">
-				 <img class="media-object" src="http://placehold.it/200x150">
+					<img class="media-object" src="http://placehold.it/200x150">
 				</div>
 				<div class="media-body">
-					<h4 class="media-heading">{{ addon.title }} <a href="{{base}}/addons/{{addon.game.short}}" class="muted">(<em>{{addon.game.title}}</em>)</a></h4>
+					<h4 class="media-heading heading-label">{{ addon.title }}</h4>
+					<a href="{{base}}/addons/{{addon.game.short}}" class="label label-game label-{{addon.game.short}}">{{addon.game.title}}</a>
 					<p><a href="{{filename}}/{{addon.game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a> <a class="btn">{% trans %}Add release{% endtrans %}</a></p>
 				</div>
 			</li>
@@ -50,7 +51,8 @@
 					<img class="media-object" src="http://placehold.it/200x150">
 				</a>
 				<div class="media-body">
-					<h4 class="media-heading">{{ addon.title }}<!-- <a href="{{base}}/addons/{{addon.game.short}}"><span class="label label-{{addon.game.short}}">{{addon.game.title}}</span></a>!--></h4>
+					<h4 class="media-heading heading-label">{{ addon.title }}</h4>
+					<a href="{{base}}/addons/{{addon.game.short}}" class="label label-game label-{{addon.game.short}}">{{addon.game.title}}</a>
 					<p><a href="{{filename}}/{{addon.game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a> <a class="btn">{% trans %}Add release{% endtrans %}</a></p>
 				</div>
 			</li>
