--- a/app/templates/publish/addon.twig
+++ b/app/templates/publish/addon.twig
@@ -1,10 +1,18 @@
 {% extends 'root.twig' %}
 
+{% set title = 'Edit addon'|trans %}
+
 {% block content %}
-<h1>{{ addon_title }}</h1>
+<h1>{{ title }}</h1>
+<ul class="breadcrumb">
+	<li><a href="#">Publish</a> <span class="divider">/</span></li>
+	<li class="active">Codename: Modern Combat</li>
+</ul>
 <div class="row-fluid">
-    <div class="span12">
-		<h2>{% trans %}Generic{% endtrans %}</h2>
+    <div class="span4">
+		<hr class="visible-phone">
+		<h2>{% trans %}Addon{% endtrans %}</h2>
+		<h4>{% trans %}Basic{% endtrans %}</h4>
 		<form method="post" action="{{filename}}?change-details" class="form-horizontal">
 			<div class="control-group">
 				<label class="control-label" for="title">{% trans "Title" %}</label>
@@ -13,44 +21,100 @@
 				</div>
 			</div>
 			<div class="control-group">
-				<label class="control-label" for="short">{% trans "Url" %}</label>
+				<label class="control-label" for="short">{% trans "Short" %}</label>
 				<div class="controls">
-					<input type="text" name="short" id="short" value="{{addon_short}}" maxlength="32" placeholder="{{addon_short_placeholder}}" required>
+					<input type="text" name="short" id="short" value="{{addon_short}}" maxlength="32" placeholder="{{addon_short_placeholder}}" autocapitalize="off" autocomplete="off" required>
 				</div>
 			</div>
 			<div class="control-group">
-				<label class="control-label" for="description">{% trans "Description" %}</label>
+				<label class="control-label" for="abbreviation">{% trans "Abbreviation (if any)" %}</label>
 				<div class="controls">
-					<textarea id="description"></textarea>
+					<input type="text" name="abbreviation" id="abbreviation" value="{{addon_abbreviation}}" maxlength="6">
 				</div>
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn btn-primary">{% trans %}Change{% endtrans %}</button>
+					<button type="submit" class="btn">{% trans %}Change{% endtrans %}</button>
 				</div>
 			</div>
 		</form>
-		<h2>{% trans %}Description{% endtrans %}</h2>
-		<form method="post" action="{{filename}}?change-description">
-		</form>
-		<hr class="visible-phone">
-		<h2>{% trans %}Releases{% endtrans %}</h2>
-		<h4>{% trans %}New release{% endtrans %}</h4>
-		<form method="post" action="{{filename}}?add-release" class="form-horizontal">
+		<h4>{% trans %}Dependencies{% endtrans %}</h4>
+		<form method="post" action="{{filename}}?change-details" class="form-horizontal">
+			<div class="control-group">
+				<label class="control-label" for="dependency">{% trans "Addon" %}</label>
+				<div class="controls">
+					<input type="text" name="dependency" id="dependency" data-provide="typeahead" autocomplete="off" required>
+				</div>
+			</div>
 			<div class="control-group">
 				<label class="control-label" for="version">{% trans "Version" %}</label>
 				<div class="controls">
-					<input type="text" name="version" id="version" value="" maxlength="16" required>
+					<select disabled>
+						<option value="">{% trans %}Select an addon&hellip;{% endtrans %}</option>
+					</select>
 				</div>
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn btn-primary">{% trans %}Add version{% endtrans %}</button>
+					<button type="submit" class="btn">{% trans %}Add dependency{% endtrans %}</button>
 				</div>
 			</div>
 		</form>
-		<h4>{% trans %}Existing releases{% endtrans %}</h4>
-		<div class="alert alert-warning">{% trans %}You have not created a release yet.{% endtrans %}</div>
+	</div>
+	<div class="span8">
+		<hr class="visible-phone">
+		<h2>Presentation</h2>
+		<h4>{% trans %}Description{% endtrans %}</h4>
+		<form method="post" action="{{filename}}?change-description">
+			<div class="control-group">
+				<textarea id="description" style="width: 100%; height: 200px;"></textarea>
+			</div>
+			<div class="control-group">
+				<div class="controls">
+					<button type="submit" class="btn">{% trans %}Save description{% endtrans %}</button>
+				</div>
+			</div>
+		</form>
 	</div>
 </div>
+<h2>{% trans %}Releases{% endtrans %}</h2>
+<h4>{% trans %}New release{% endtrans %}</h4>
+<form method="post" action="{{filename}}?add-release" class="form-horizontal">
+	<div class="control-group">
+		<label class="control-label" for="version">{% trans "Version" %}</label>
+		<div class="controls">
+			<input type="text" name="version" id="version" value="" maxlength="16" required>
+		</div>
+	</div>
+	<div class="control-group">
+		<div class="controls">
+			<button type="submit" class="btn btn-primary">{% trans %}Add version{% endtrans %}</button>
+		</div>
+	</div>
+</form>
+<h4>{% trans %}Existing releases{% endtrans %}</h4>
+<div class="alert alert-warning">{% trans %}You have not created a release yet.{% endtrans %}</div>
+</div>
+</div>
+{% endblock %}
+
+{% block javascript %}
+{{ parent() }}
+
+function addons(query, process) {
+	return ['Hazard', 'Clonk Infinity', 'Codename: Modern Combat'];
+}
+
+var abbreviations = {cmc:'Codename: Modern Combat'};
+
+/*function abbreviationMatcher(item) {
+	if(typeof abbreviations[this.query] !== 'undefined') {
+		return item == abbreviations[this.query];
+	}
+	return false;
+}*/
+
+$(document).ready(function() {
+	$('#dependency').typeahead({source:addons});
+});
 {% endblock %}
