--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -9,7 +9,7 @@
 <div class="row-fluid">
     <div class="span4">
 		<h3>{% trans %}Clonk Rage{% endtrans %}</h3>
-		<p><img src="{{base}}/img/logo_clonkrage.png"></p>
+		<p><img src="{{base}}/img/game/rage.png"></p>
 		<p>{% trans %}The classic game with hundreds of community-built, high-quality addons. Magical wars, strategic shooters and futuristic settling: Clonk Rage has it all.{% endtrans %}</p>
 		<p>{% trans %}Often the sheer selection is overwelming, so be sure to spread the word and vote for the addons you like.{% endtrans %}</p>
 		<p>
@@ -19,7 +19,7 @@
     </div>
     <div class="span4">
 		<h3>{% trans %}OpenClonk{% endtrans %}</h3>
-		<p><img src="{{base}}/img/logo_openclonk.png"></p>
+		<p><img src="{{base}}/img/game/openclonk.png"></p>
 		<p>{% trans %}The opensource successor to the Clonk series, built by players and developers of the previous Clonk titles.{% endtrans %}</p>
 		<p>{% trans %}Although the addon selection is still limited, OpenClonk completely reimaginges a great part of the game and greatly refines the technology, now supporting three-dimensional models within the game.{% endtrans %}</p>
 		<p>
