--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -12,6 +12,10 @@
 		<form method="post" id="form-contact">
 			<textarea required></textarea>
 			<button class="btn btn-primary" type="submit">{% trans "Send feedback" %}</button>
+			{% if by %}
+				{% set sender = by|escape('html') %}
+				<span class="btn btn-link" disabled>{% trans %}Sending as {{sender}}.{% endtrans %}</span>
+			{% endif %}
 		</form>
     </div>
 	<div class="span5">
