reworked addon (game) portal layout

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -335,6 +335,11 @@ input.noerror:focus:invalid:focus, textarea.noerror:focus:invalid:focus, select.
 	}
 }
 
+.sort-bar {
+	margin-bottom: 12px;
+	font-weight: bold;
+}
+
 /* Labels */
 
 .heading-label, .carousel-caption .heading-label {
