fix layout beeing broken on mobile IE

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -37,5 +37,15 @@
 				'{{base}}/poly/placeholder_polyfill.jquery.min.combo.js'
 			  ]
 	});</script>
+	<script>(function() {
+		if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+		  var msViewportStyle = document.createElement("style");
+		  msViewportStyle.appendChild(
+			document.createTextNode("@-ms-viewport{width:auto!important}")
+		  );
+		  document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
+		}
+		})();
+	</script>
 	</body>
 </html>
