--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -2,14 +2,15 @@
 <html lang="{% trans "en" %}">
 	<head lang="{% trans "en" %}">
 		<meta charset="utf-8">
-		<title>{% if title %}{{title}}{% else %}{{brand}}{% endif %}</title>
+		<title>{{title|default(brand)}}</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="shortcut icon" href="{{base}}/img/favicon.ico" type="image/x-icon">
 		<link href="{{base}}/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{base}}/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="{{base}}/css/lorry.min.css" rel="stylesheet">
-		<meta property="og:title" content="{{title}}">
+		<meta property="og:title" content="{{title|default(brand)}}">
+		<meta property="og:image" content="{{base}}/img/logo.png">
 		<meta property="og:site_name" content="{{brand}}">
 	</head>
 	<body>{% block body %}
