finalised addon buttons on publish portal

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -38,7 +38,7 @@
 				<div class="media-body">
 					<h4 class="media-heading heading-label">{{ addon.title }}</h4>
 					<a href="{{base}}/addons/{{addon.game.short}}" class="label label-game label-{{addon.game.short}}">{{addon.game.title}}</a>
-					<p><a href="{{filename}}/{{addon.game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a> <a class="btn">{% trans %}Add release{% endtrans %}</a></p>
+					<p><a href="{{filename}}/{{addon.game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a></p>
 				</div>
 			</li>
 		{% endfor %}
@@ -57,9 +57,9 @@
 					<img class="media-object" src="http://placehold.it/200x150">
 				</a>
 				<div class="media-body">
-					<h4 class="media-heading heading-label">{{ addon.title }}</h4>
+					<h4 class="media-heading heading-label"><a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}">{{ addon.title }}</a></h4>
 					<a href="{{base}}/addons/{{addon.game.short}}" class="label label-game label-{{addon.game.short}}">{{addon.game.title}}</a>
-					<p><a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}" class="btn btn-success">{% trans %}View addon page{% endtrans %}</a> <a href="{{filename}}/{{addon.game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a> <a class="btn">{% trans %}Add release{% endtrans %}</a></p>
+					<p><a href="{{filename}}/{{addon.game.short}}/{{addon.short}}" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a> <a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}" class="btn">{% trans %}View addon page{% endtrans %}</a></p>
 				</div>
 			</li>
 		{% endfor %}
