updated admin and moderator portal layout

--- a/app/templates/manage/administration.twig
+++ b/app/templates/manage/administration.twig
@@ -7,9 +7,13 @@
 <div class="row-fluid">
 	<div class="span4">
 		<h2>{% trans %}Overview{% endtrans %}</h2>
+		<h4>{% trans %}Management{% endtrans %}</h4>
+		<a href="{{base}}/users" class="btn btn-primary">Show moderators</a>
 	</div>
 	<div class="span4">
 		<h2>{% trans %}Front page{% endtrans %}</h2>
+		<h4>Carousel</h4>
+		<h4>Spotlight</h4>
 	</div>
 </div>
 {% endblock %}
