--- a/app/templates/generic/hero.twig
+++ b/app/templates/generic/hero.twig
@@ -5,6 +5,6 @@
 	{% if title %}<h1>{{ title }}</h1>{% endif %}
 	{% if description %}<p>{{ description }}</p>{% endif %}
 	{% if raw %}{{ raw|raw }}{% endif %}
-	<p><a class="btn btn-primary btn-large" href="{{ base }}">{% trans "Return to home &raquo;"%}</a></p>
+	<p><a class="btn btn-primary btn-large" href="{{ base }}">{% trans "Return to home"%}</a></p>
 </div>
 {% endblock %}
