added download links

--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -29,7 +29,7 @@
 				<img src="{{base}}img/title.png" style="padding: 0; border: 0; width: 32%; margin-left: 0; margin-right: 0;">
 			</p>
 			<div class="visible-desktop" id="download">
-				<p class="center"><button class="btn btn-primary">Download</button> 70.3MB total</p>
+				<p class="center"><a href="{{base}}/download/{{game.short}}/{{addon.short}}/{{version}}" class="btn btn-primary">Download</a> 70.3MB total</p>
 				{% if requirements %}
 				<p class="center">
 					Requires
