--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -29,7 +29,7 @@
 			</p>
 			<p class="hidden-phone">
 				<a href="{{filename}}/{{addon.short}}" class="btn">{% trans %}Addon page{% endtrans %}</a>
-				<a href="#" class="btn btn-primary	">{% trans %}Download{% endtrans %}</a>
+				<a href="{{base}}/download/{{short}}/{{addon.short}}" class="btn btn-primary">{% trans %}Download{% endtrans %}</a>
 				<!--<a href="#" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a>!-->
 			</p>
 		</div>
