link front page addons to release page with version

--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -45,7 +45,7 @@
 						<a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}"><img class="media-object" src="http://placehold.it/200x150"></a>
 					</div>
 					<div class="media-body">
-						<h4 class="media-heading heading-label"><a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}">{{ addon.title }}{% if addon.version %} v{{addon.version}}{% endif %}</a></h4>
+						<h4 class="media-heading heading-label"><a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}/{{addon.version}}">{{ addon.title }}{% if addon.version %} v{{addon.version}}{% endif %}</a></h4>
 						<a href="{{base}}/addons/{{addon.game.short}}" class="label label-game label-{{addon.game.short}}">{{addon.game.title}}</a>
 						<p class="hidden-phone">
 							{% if addon.description %}
