allow textareas only to be resized vertically

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -26,6 +26,10 @@ input {
 	max-width: 100%;
 }
 
+textarea {
+	resize: vertical;
+}
+
 select {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -184,7 +188,6 @@ h2 + h4 {
 		width: 95%;
 		margin-left: 0;
 		margin-right: 0;
-		resize: vertical;
 	}
 }
 
