rename section basic to details on addon publish page

--- a/app/templates/publish/addon.twig
+++ b/app/templates/publish/addon.twig
@@ -14,7 +14,7 @@
     <div class="span4">
 		<hr class="visible-phone">
 		<h2>{% trans %}Addon{% endtrans %}</h2>
-		<h4>{% trans %}Basic{% endtrans %}</h4>
+		<h4>{% trans %}Details{% endtrans %}</h4>
 		<form method="post" action="{{filename}}?change-details" class="form-horizontal">
 			<div class="control-group">
 				<label class="control-label" for="title">{% trans "Title" %}</label>
@@ -36,7 +36,7 @@
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn">{% trans %}Change{% endtrans %}</button>
+					<button type="submit" class="btn">{% trans %}Change details{% endtrans %}</button>
 				</div>
 			</div>
 		</form>
@@ -73,7 +73,7 @@
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn">{% trans %}Save description{% endtrans %}</button>
+					<button type="submit" class="btn">{% trans %}Change summary{% endtrans %}</button>
 				</div>
 			</div>
 		</form>
@@ -84,7 +84,7 @@
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<button type="submit" class="btn">{% trans %}Save description{% endtrans %}</button>
+					<button type="submit" class="btn">{% trans %}Change description{% endtrans %}</button>
 				</div>
 			</div>
 		</form>
