prepared for user table filtering

--- a/app/templates/manage/administration.twig
+++ b/app/templates/manage/administration.twig
@@ -8,7 +8,7 @@
 	<div class="span4">
 		<h2>{% trans %}Overview{% endtrans %}</h2>
 		<h4>{% trans %}Management{% endtrans %}</h4>
-		<a href="{{base}}/users" class="btn btn-primary">Show moderators</a>
+		<a href="{{base}}/users?filter=moderator" class="btn btn-primary">Show moderators</a>
 	</div>
 	<div class="span4">
 		<h2>{% trans %}Front page{% endtrans %}</h2>
