--- a/app/templates/manage/moderation.twig
+++ b/app/templates/manage/moderation.twig
@@ -9,7 +9,7 @@
 		<h2>{% trans %}Overview{% endtrans %}</h2>
 		<h4>{% trans %}Users{% endtrans %}</h4>
 		<a href="{{base}}/users" class="btn btn-primary">Show all users</a>
-		<a href="{{base}}/users" class="btn">Show bans</a>
+		<a href="{{base}}/users?filter=bans" class="btn">Show bans</a>
 	</div>
 	<div class="span4">
 		<h2>{% trans %}Addons{% endtrans %}</h2>
