--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -36,7 +36,7 @@
 			<a class="carousel-control left" href="#featured-front" data-slide="prev">&lsaquo;</a>
 			<a class="carousel-control right" href="#featured-front" data-slide="next">&rsaquo;</a>
 		</div>
-		<h3>{% trans %}New releases on Lorry{% endtrans %}</h3>
+		<h3><span class="hidden-phone">{% trans %}New releases on Lorry{% endtrans %}</span><span class="visible-phone">{% trans %}New releases{% endtrans %}</span></h3>
 		{% if new_addons %}
 			<ul class="media-list addons-small">
 			{% for addon in new_addons %}
@@ -64,11 +64,10 @@
 	</div>
 	<div class="span4">
 		<hr class="visible-phone">
-		{% if __session %}
-			{% set username = __username %}
-			<h2>{% trans %}Welcome back!{% endtrans %}</h2>
+		{% if user_login %}
+			<h2>{% trans %}Welcome back.{% endtrans %}</h2>
 		{% else %}
-			<h2>{% trans %}Welcome to Lorry.{% endtrans %}</h2>
+			<h2><span class="hidden-phone">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="visible-phone">{% trans %}Welcome{% endtrans %}</span></h2>
 		{% endif %}
 		<p class="text-big">{% trans %}Lorry is the place to find out about and get the best addons for the game series Clonk, and to discuss all about your favourites with the community.{% endtrans %}</p>
 		<p>
