updated mobile IE fix to official MS recommendation

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -1,5 +1,3 @@
-@-ms-viewport{width:auto!important}
-
 .brand {
 	font-family: serif;
 }
@@ -467,4 +465,10 @@ input.noerror:focus:invalid:focus, textarea.noerror:focus:invalid:focus, select.
 	color: #fff;
 	background-color: #008DB8;
 	*background-color: #003bb3;
+}
+
+/* Fixes */
+
+@-ms-viewport{
+	width: device-width;
 }
