add missing translation for addons with empty description

--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -44,7 +44,7 @@
 			{% if addon_description %}
 				<p>{{ addon_description }}</p>
 			{% else %}
-				<p><em>This addon has no description.</em></p>
+				<p><em>{% trans %}This addon has no description.{% endtrans %}</em></p>
 			{% endif %}
 			{% if release_description %}
 				<p>{{ release_description }}</p>
