add multiple translations

--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -49,7 +49,7 @@
 			{% if release_description %}
 				<p>{{ release_description }}</p>
 			{% endif %}
-			<p>Categories <a href="#">Shooter</a>, <a href="#">Strategy</a>, <a href="#">Arena</a>.</p>
+			<p>{% trans %}Categories{% endtrans %} <a href="#">Shooter</a>, <a href="#">Strategy</a>, <a href="#">Arena</a>.</p>
 		</div>
 	</div>
 	<hr>
